<resources>
    <string name="app_name">Psalter</string>
    <string name="mediaBaseUrl">https://github.com/psalter2/PsalterFiles/raw/master/</string>

    <string name="action_nightMode">Night Mode</string>
    <string name="action_random">Random</string>
    <string name="action_recents">Recents</string>
    <string name="action_search">Search</string>
    <string name="action_shuffle">Shuffle Audio</string>
    <string name="action_sendFeedback">Send Feedback</string>
    <string name="action_enableOffline">Enable Offline</string>

    <string name="pref_history">key_history</string>
    <string name="pref_nightmode">key_nightmode</string>
    <string name="pref_lastindex">key_lastindex</string>
    <string name="pref_showScore">key_showscore</string>
    <string name="pref_enableOffline">key_enableOffline</string>
    <string name="pref_fabLongPressCount">key_fabLongPressCount</string>
    <string name="pref_launchCount">key_launchCount</string>
    <string name="pref_ratePromptCount">key_ratePromptCount</string>
    <string name="pref_lastRatePromptShownTime">key_lastRateDialogShownTime</string>
    <string name="pref_neverShowRatePromptAgain">key_neverShowRatePromptAgain</string>
    <string name="pref_textScale">key_textScale</string>


    <string name="pref_tutorialshown_fabreminder">pref_tutorialshown_fabreminder</string>
    <string name="tutorial_fabreminder_title">You may have forgotten…</string>
    <string name="tutorial_fabreminder_description">You can start shuffling by holding down the play button. It really is more convenient.</string>

    <string name="pref_tutorialshown_fablongpress">pref_tutorialshown_fablongpress</string>
    <string name="tutorial_fab_title">Press this button to play song</string>
    <string name="tutorial_fab_description">Press and hold to continue playing random numbers. Makes great background music!</string>

    <string name="pref_tutorialShown_favorites">pref_tutorialshown_favorites</string>
    <string name="tutorial_viewFavorites_title">View Favorites</string>
    <string name="tutorial_viewFavorites_description">Find all your favorite psalters in the menu</string>
    <string name="tutorial_addToFavorites_title">Add to favorites</string>
    <string name="tutorial_addToFavorites_description">Use this button to keep track of your favorite numbers</string>

    <string name="pref_tutorialshown_showscore">pref_tutorialshown_showscore_2</string>
    <string name="tutorial_showscore_title"> Press this button to toggle score images on or off</string>
    <string name="toggle_score">Toggle Score</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="media_control">Media Controlsf</string>
    <string name="psalter">Psalter #</string>
    <string name="lyrics">Lyrics</string>
    <string name="psalm">Psalm #</string>
    <string name="favorites">Favorites</string>
    <string name="text_size">Text size</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="big">Big</string>
    <string name="huge">Huge</string>
    <string name="crash">Crash</string>

    <string-array name="search_ignore_strings">
        <item>\'</item>
        <item>\"</item>
        <item>,</item>
        <item>:</item>
        <item>;</item>
        <item>.</item>
    </string-array>
</resources>
