<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/action_random"
        android:title="@string/action_random"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_casino_white_24dp"/>

    <item android:id="@+id/action_history"
        android:title="@string/action_recents"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_history_24"/>

    <item android:id="@+id/action_downloadAll"
        android:title="@string/action_enableOffline"
        app:showAsAction="never" />

    <item android:id="@+id/action_favorites"
        android:title="@string/favorites"
        app:showAsAction="never"/>

    <item android:id="@+id/action_shuffle"
        android:title="@string/action_shuffle"
        app:showAsAction="never" />

    <item android:id="@+id/action_fontSize"
        android:title="@string/text_size"
        app:showAsAction="never"
        app:actionViewClass="android.widget.Spinner">
        <menu>
            <item android:id="@+id/action_fontSize_small"
                android:title="@string/small" />

            <item android:id="@+id/action_fontSize_normal"
                android:title="@string/normal" />

            <item android:id="@+id/action_fontSize_big"
                android:title="@string/big" />

            <item android:id="@+id/action_fontSize_huge"
                android:title="@string/huge" />
        </menu>
    </item>

    <item android:id="@+id/action_nightMode"
        android:title="@string/action_nightMode"
        app:showAsAction="never"
        android:checkable="true"/>

    <item android:id="@+id/action_sendFeedback"
        android:title="@string/action_sendFeedback"
        app:showAsAction="never"/>
</menu>

