<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_coordinator_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:keepScreenOn="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.psalter2.psalter.ui.Activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            android:theme="@style/Theme.AppCompat"
            app:menu="@menu/menu_options"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            android:background="@color/colorPrimary"/>

        <ListView
            android:id="@+id/lvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants">

            <androidx.viewpager.widget.PagerTitleStrip
                android:id="@+id/viewPagerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/PagerTitleStrip" />
        </androidx.viewpager.widget.ViewPager>

        <TableLayout
            android:id="@+id/tableButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:visibility="gone">

            <TableRow android:gravity="center"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/searchBtn_Psalter"
                    android:text="@string/psalter"
                    android:theme="@style/ToggleButton"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/searchBtn_Lyrics"
                    android:text="@string/lyrics"
                    android:theme="@style/ToggleButton" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/searchBtn_Psalm"
                    android:text="@string/psalm"
                    android:theme="@style/ToggleButton" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabToggleScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="88dp"
        android:theme="@style/SecondaryFab"
        android:src="@drawable/ic_clef_3"
        android:tint="@color/button"
        android:contentDescription="@string/toggle_score"
        app:fabSize="mini"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabToggleFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="69.2548339959dp"
        android:layout_marginBottom="69.2548339959dp"
        android:theme="@style/SecondaryFab"
        android:src="@drawable/baseline_star_rate_white_24"
        android:tint="@color/button"
        android:contentDescription="@string/toggle_favorite"
        app:fabSize="mini"/>

    <!-- a = angle from top of screen, straight down to middle of big fab, over to middle of favorites fab -->
    <!-- marginEnd = 64sin(a) + 24 -->
    <!-- marginBottom = 64sin(90 - a) + 24 -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:theme="@style/PrimaryFab"
        android:src="@drawable/play_pause"
        android:contentDescription="@string/media_control"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>